dernier ajustements avant remise

--- a/methode_brent.ipynb
+++ b/methode_brent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 64,
    "id": "e5b0c2c1",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 65,
    "id": "3d0bb557",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 66,
    "id": "e1118370",
    "metadata": {},
    "outputs": [],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 67,
    "id": "76716542",
    "metadata": {},
    "outputs": [],
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 68,
    "id": "7e3879d4",
    "metadata": {},
    "outputs": [],
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 69,
    "id": "4608004a",
    "metadata": {},
    "outputs": [
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 70,
    "id": "b8ba5f7a",
    "metadata": {},
    "outputs": [
@@ -364,28 +364,28 @@
        "      <th>Dichotomie</th>\n",
        "      <td>2.158176407217979</td>\n",
        "      <td>26</td>\n",
-       "      <td>0.00021379999816417694</td>\n",
+       "      <td>0.000387699983548373</td>\n",
        "      <td>4.8730773840587336e-08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Sécante</th>\n",
        "      <td>2.158176406584893</td>\n",
        "      <td>9</td>\n",
-       "      <td>0.00010030000703409314</td>\n",
+       "      <td>0.0001734999823383987</td>\n",
        "      <td>1.9396469831107594e-08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Dekker</th>\n",
        "      <td>2.158176406193377</td>\n",
        "      <td>8</td>\n",
-       "      <td>0.00011630001245066524</td>\n",
+       "      <td>0.0002030999748967588</td>\n",
        "      <td>1.255406305783921e-09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Brent</th>\n",
        "      <td>2.1581764061662834</td>\n",
        "      <td>7</td>\n",
-       "      <td>0.00012440001592040062</td>\n",
+       "      <td>0.00023040000814944506</td>\n",
        "      <td>2.057705795417015e-14</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -394,10 +394,10 @@
       ],
       "text/plain": [
        "                Racine trouvée Nombre d'itérations       Temps d'éxecution  \\\n",
-       "Dichotomie   2.158176407217979                  26  0.00021379999816417694   \n",
-       "Sécante      2.158176406584893                   9  0.00010030000703409314   \n",
-       "Dekker       2.158176406193377                   8  0.00011630001245066524   \n",
-       "Brent       2.1581764061662834                   7  0.00012440001592040062   \n",
+       "Dichotomie   2.158176407217979                  26    0.000387699983548373   \n",
+       "Sécante      2.158176406584893                   9   0.0001734999823383987   \n",
+       "Dekker       2.158176406193377                   8   0.0002030999748967588   \n",
+       "Brent       2.1581764061662834                   7  0.00023040000814944506   \n",
        "\n",
        "                     Écart relatif  \n",
        "Dichotomie  4.8730773840587336e-08  \n",
@@ -406,7 +406,7 @@
        "Brent        2.057705795417015e-14  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 71,
    "id": "aaf7a106",
    "metadata": {},
    "outputs": [
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 72,
    "id": "a22d890c",
    "metadata": {},
    "outputs": [
@@ -547,28 +547,28 @@
        "      <th>Dichotomie</th>\n",
        "      <td>2.826723718643188</td>\n",
        "      <td>22</td>\n",
-       "      <td>0.00022610000451095402</td>\n",
+       "      <td>0.00018079997971653938</td>\n",
        "      <td>1.0086529764251262e-07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Sécante</th>\n",
        "      <td>2.826723715791775</td>\n",
        "      <td>5</td>\n",
-       "      <td>6.210000719875097e-05</td>\n",
+       "      <td>5.9900019550696015e-05</td>\n",
        "      <td>8.122269615874137e-12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Dekker</th>\n",
        "      <td>2.826723715791775</td>\n",
        "      <td>5</td>\n",
-       "      <td>7.9699995694682e-05</td>\n",
+       "      <td>7.930002175271511e-05</td>\n",
        "      <td>8.122269615874137e-12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Brent</th>\n",
        "      <td>2.826723715796209</td>\n",
        "      <td>5</td>\n",
-       "      <td>9.950000094249845e-05</td>\n",
+       "      <td>0.00010840001050382853</td>\n",
        "      <td>1.487302252485115e-10</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -577,10 +577,10 @@
       ],
       "text/plain": [
        "               Racine trouvée Nombre d'itérations       Temps d'éxecution  \\\n",
-       "Dichotomie  2.826723718643188                  22  0.00022610000451095402   \n",
-       "Sécante     2.826723715791775                   5   6.210000719875097e-05   \n",
-       "Dekker      2.826723715791775                   5     7.9699995694682e-05   \n",
-       "Brent       2.826723715796209                   5   9.950000094249845e-05   \n",
+       "Dichotomie  2.826723718643188                  22  0.00018079997971653938   \n",
+       "Sécante     2.826723715791775                   5  5.9900019550696015e-05   \n",
+       "Dekker      2.826723715791775                   5   7.930002175271511e-05   \n",
+       "Brent       2.826723715796209                   5  0.00010840001050382853   \n",
        "\n",
        "                     Écart relatif  \n",
        "Dichotomie  1.0086529764251262e-07  \n",
@@ -589,7 +589,7 @@
        "Brent        1.487302252485115e-10  "
       ]
      },
-     "execution_count": 59,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,6 +599,8 @@
     "ref2 = brentq(cubic_spline, 2.7, 2.9, xtol=1e-20)\n",
     "\n",
     "# Différentes données que l'on souhaite analyser\n",
+    "liste_fct = [methode_bissection, methode_secante, methode_dekker, methode_brent]\n",
+    "noms = [\"Dichotomie\", \"Sécante\", \"Dekker\", \"Brent\"]\n",
     "racines2 = []\n",
     "temps_exec2 = []\n",
     "nb_iter2 = []\n",
@@ -649,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 73,
    "id": "adcacafb",
    "metadata": {},
    "outputs": [
@@ -684,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 74,
    "id": "ffb4eaf7",
    "metadata": {},
    "outputs": [
@@ -753,7 +755,7 @@
        "Brent       0.9969664348966029                  14"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -799,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 75,
    "id": "0a6efc0d",
    "metadata": {},
    "outputs": [
@@ -868,7 +870,7 @@
        "Brent       0.2500000000074259                   6"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -880,6 +882,8 @@
     "\n",
     "\n",
     "# 3 racines à l'intérieur des bornes\n",
+    "liste_fct = [methode_bissection, methode_secante, methode_dekker, methode_brent]\n",
+    "noms = [\"Dichotomie\", \"Sécante\", \"Dekker\", \"Brent\"]\n",
     "racines = []\n",
     "nb_iter = []\n",
     "\n",
@@ -910,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 76,
    "id": "d493b522",
    "metadata": {},
    "outputs": [
@@ -979,7 +983,7 @@
        "Brent       0.9999999999999996                   8"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -991,16 +995,16 @@
     "\n",
     "\n",
     "# Une borne près d'une autre racine\n",
+    "liste_fct = [methode_bissection, methode_secante, methode_dekker, methode_brent]\n",
+    "noms = [\"Dichotomie\", \"Sécante\", \"Dekker\", \"Brent\"]\n",
     "racines = []\n",
     "nb_iter = []\n",
-    "convergence = []\n",
     "\n",
     "for fct in liste_fct:\n",
     "    racine, n, conv = fct(f4, -0.4, 2)\n",
     "    \n",
     "    racines.append(f\"{racine}\")\n",
     "    nb_iter.append(f\"{n}\")\n",
-    "    convergence.append(conv)\n",
     "\n",
     "data = {\n",
     "    \"Racine trouvée\": racines,\n",
